# FEM_practice

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  Makefile  README.md
Data/: cube.vtf  editor.py  editor_halfshpere.py  editor_penbox.py  editor_plain.py  house2.1.ele  house2.1.face  house2.1.minsine  penbox.vtf  transfer.py
Data/staller/: staller_trans.py
Data/staller/cylinder/: cylinder.node
Data/staller/house2/: house2.1.node  house2.1.stats
Data/staller/penbox/: penbox.ele  penbox.node
Data/tet/: cylinder.ele  tet_trans.py
Data/vt/: cube.vt  house2.1.vt  penbox.vt  refine_obj.py
Data/vtf/: cube.vtf  cylinder.vtf  doubletetra.vtf  penbox.vtf  split.py  tetra.vtf
experiment/: cylinder.txt  cylinder2.txt  cylinder_refine.txt  plot_F_d.py
include/: AirModel.h  BendingModel.h  Controls.h  Dependence.h  Dynamic.h  ElasticModel.h  FilmModel.h  Models.h  ObjState.h  Optimizer.h  Piola.h  Tetra.h  TetraMesh.h  TetraMeshIO.h  Types.h  Viewer.h  arcball.h  controls.h
optimize/: Control_Optimize.cpp  Control_Optimize.h  main.cpp
run/: Control_Simulation.cpp  Control_Simulation.h  main.cpp
shader/: fragmentShader.glsl  vertexShader.glsl
src/: Control_Simulation.cpp  Controls.cpp  Dynamic.cpp  Dynamic_Air.cpp  Dynamic_Elastic.cpp  Dynamic_Film.cpp  Dynamic_Hindge.cpp  Dynamic_Mat.cpp  ElasticModel.cpp  FilmModel.cpp  ObjState.cpp  ObjState_Mat.cpp  Optimizer.cpp  Optimizer_GN.cpp  Optimizer_NR.cpp  Piola.cpp  TetraMesh.cpp  TetraMeshIO.cpp  Viewer.cpp  controls.cpp  main.cpp
test/: bending_unittest.cpp  main_test.cpp
(+2 files in other folders)
